* added new command that supports output of a PDF file to the current directory using the     filename that can be specified directly in the plot file using a command
    use #!OUTPUT=file_name

    to define the filename otherwise temp.pdf will be used

--- a/info.plist
+++ b/info.plist
@@ -10,6 +10,7 @@
 			<string>799B68E9-5DA3-41CC-BC70-76B1D1C83DB6</string>
 			<string>442541BC-836F-49F3-85AF-9F1BF4A3444C</string>
 			<string>1DAAA26A-46C4-4877-97A2-88D457B1BF46</string>
+			<string>71C84ACA-58FD-4448-8555-E9DB6AECA034</string>
 			<string>------------------------------------</string>
 			<string>D8CBE542-D110-4232-A8C1-DCC63289FB21</string>
 			<string>48FDAAD9-61E8-4020-B600-430D66060696</string>
